--- a/src/main/resources/theChemistResources/localization/eng/EnumStrings.json
+++ b/src/main/resources/theChemistResources/localization/eng/EnumStrings.json
@@ -1,19 +1,4 @@
 {
-  "theChemist:ABYSSAL_CLARITY": {
-    "NAME": "Abyssal Clarity",
-    "DESCRIPTIONS": [
-      "Gain #b4 #yBlock. Draw #b1 card."
-    ]
-  },
-  "theChemist:ANTIDOTE": {
-    "NAME": "Antidote"
-  },
-  "theChemist:CALM_OF_THE_DEPTHS": {
-    "NAME": "Calm of the Depths",
-    "DESCRIPTIONS": [
-      "Gain #b4 #yBlock. Gain #b1 #yDexterity."
-    ]
-  },
   "theChemist:CARAPACE_COCKTAIL": {
     "NAME": "Carapace Cocktail",
     "DESCRIPTIONS": [
@@ -35,34 +20,10 @@
   "theChemist:DARK_MATTER": {
     "NAME": "Dark Matter"
   },
-  "theChemist:DEMONS_EMBRACE": {
-    "NAME": "Demon's Embrace",
-    "DESCRIPTIONS": [
-      "Inflict #b3 #yWeak on a random enemy."
-    ]
-  },
-  "theChemist:DEVILS_TOUCH": {
-    "NAME": "Devil's Touch",
-    "DESCRIPTIONS": [
-      "Inflict #b1 #yWeak and #b1 #yVulnerable on ALL enemies."
-    ]
-  },
-  "theChemist:DRAGONS_BITE": {
-    "NAME": "Dragon's Bite",
-    "DESCRIPTIONS": [
-      "Deal #b5 damage and inflict #b1 #yWeak on a random enemy."
-    ]
-  },
   "theChemist:DRAGONS_BREATH": {
     "NAME": "Dragon's Breath",
     "DESCRIPTIONS": [
       "Deal #b5 damage on ALL enemies."
-    ]
-  },
-  "theChemist:DRAGONS_CLAW": {
-    "NAME": "Dragon's Claw",
-    "DESCRIPTIONS": [
-      "Deal #b5 damage and inflict #b1 #yVulnerable on a random enemy."
     ]
   },
   "theChemist:DRAGONS_CURSE": {
@@ -78,12 +39,6 @@
     "NAME": "Dragon's Feast",
     "DESCRIPTIONS": [
       "Deal #b5 damage to a random enemy. Gain life equal to unblocked damage dealt."
-    ]
-  },
-  "theChemist:DRAGONS_GLARE": {
-    "NAME": "Dragon's Glare",
-    "DESCRIPTIONS": [
-      "Deal #b5 damage to a random enemy. Draw #b1 card."
     ]
   },
   "theChemist:DRAGONS_RAGE": {
@@ -102,15 +57,6 @@
     "NAME": "Dud",
     "DESCRIPTIONS": [
       "Deal #b3 damage to ALL enemies. Deal #b3 damage to yourself."
-    ]
-  },
-  "theChemist:EYEDROP": {
-    "NAME": "Eyedrop"
-  },
-  "theChemist:FIENDS_CARESS": {
-    "NAME": "Fiend's Caress",
-    "DESCRIPTIONS": [
-      "Inflict #b3 #yVulnerable on a random enemy."
     ]
   },
   "theChemist:GALVANIZING_AGENT": {
@@ -137,12 +83,6 @@
   "theChemist:HI_POTION": {
     "NAME": "Hi-Potion"
   },
-  "theChemist:HOLY_WATER": {
-    "NAME": "Holy Water"
-  },
-  "theChemist:MAIDENS_KISS": {
-    "NAME": "Maiden's Kiss"
-  },
   "theChemist:MEGA_ETHER": {
     "NAME": "Mega-Ether",
     "DESCRIPTIONS": [
@@ -153,12 +93,6 @@
     "NAME": "Mega-Potion",
     "DESCRIPTIONS": [
       "Heal #b3 HP. Gain #b3 #yBlock."
-    ]
-  },
-  "theChemist:OCEANS_FURY": {
-    "NAME": "Ocean's Fury",
-    "DESCRIPTIONS": [
-      "Gain #b4 #yBlock and #b1 #yStrength."
     ]
   },
   "theChemist:PANACEA": {
@@ -175,6 +109,9 @@
     "DESCRIPTIONS": [
       "Gain the #yPhoenix #yFire buff."
     ]
+  },
+  "theChemist:REMEDY": {
+    "NAME": "Remedy"
   },
   "theChemist:RESURRECTION": {
     "NAME": "Resurrection",
