--- a/src/main/resources/theChemistResources/localization/eng/CardStrings.json
+++ b/src/main/resources/theChemistResources/localization/eng/CardStrings.json
@@ -35,6 +35,10 @@
     "NAME": "Chicken Knife",
     "DESCRIPTION": "Deal !D! damage. If your HP is below 10%, flee from combat instead. Exhaust."
   },
+  "theChemist:ChitinousBash": {
+    "NAME": "Chitinous Bash",
+    "DESCRIPTION": "Deal !D! damage. Apply !M! Vulnerable. Add 1 Turtle Shell Reagent to your stockpile."
+  },
   "theChemist:Dagger": {
     "NAME": "Dagger",
     "DESCRIPTION": "Deal !D! damage."
@@ -174,6 +178,10 @@
     "NAME": "Recover",
     "DESCRIPTION": "Reduce your turn count on any Vulnerable, Frail, and Weakened debuffs by !M!."
   },
+  "theChemist:Roar": {
+    "NAME": "Roar",
+    "DESCRIPTION": "Deal !D! damage to ALL enemies. Add 1 Dragon Fang Reagent to your stockpile."
+  },
   "theChemist:SageStaff": {
     "NAME": "Sage Staff",
     "DESCRIPTION": "Deal !D! damage. If this card is Exhausted, heal !M! HP and gain !B! Block."
@@ -205,6 +213,10 @@
   "theChemist:TurtleShell": {
     "NAME": "Turtle Shell",
     "DESCRIPTION": "Gain !B! Block. Add 1 Turtle Shell Reagent to your stockpile."
+  },
+  "theChemist:VoidStrike": {
+    "NAME": "Void Strike",
+    "DESCRIPTION": "Deal !D! damage. Add 1 Dark Matter Reagent to your stockpile."
   },
   "theChemist:VolatileConcoction": {
     "NAME": "Volatile Concoction",
