Updated pom.xml and code for new library versions, implemented some small balance tweaks/text fixes

--- a/src/main/resources/theChemistResources/localization/eng/CardStrings.json
+++ b/src/main/resources/theChemistResources/localization/eng/CardStrings.json
@@ -128,8 +128,7 @@
   },
   "theChemist:IronDraught": {
     "NAME": "Iron Draught",
-    "DESCRIPTION": "The next damage you take is reduced by half. Exhaust.",
-    "UPGRADE_DESCRIPTION": "The next damage you take is reduced by half."
+    "DESCRIPTION": "The next damage you take is reduced by half. Exhaust."
   },
   "theChemist:MageMasher": {
     "NAME": "Mage Masher",
