Added a bit more scaffolding for Pharmacology, still not fully implemented

--- a/src/main/resources/theChemistResources/localization/eng/PowerStrings.json
+++ b/src/main/resources/theChemistResources/localization/eng/PowerStrings.json
@@ -78,6 +78,14 @@
       " additional damage."
     ]
   },
+  "theChemist:PharmacologyPower": {
+    "NAME": "Pharmacology",
+    "DESCRIPTIONS": [
+      "Your next potion has #b50% increased potency.",
+      "Your next #b",
+      " potions have #b50% increased potency."
+    ]
+  },
   "theChemist:PhoenixFirePower": {
     "NAME": "Phoenix Fire",
     "DESCRIPTIONS": [
